# ArcScreen

./: .gitignore  README.md
src/: CMakeLists.txt  images.qrc  res.qrc  user-config.cmake
src/includes/: ArcScreen.hpp  ArcScreenPlugin.hpp  ArcScreenPluginSideBar.hpp  ArcScreenSideBar.hpp  ArcScreenToolButton.hpp  ScreenViewer.hpp  Skin.hpp
src/skin/: main.css
src/sources/: ArcScreen.cpp  ArcScreenPlugin.cpp  ArcScreenPluginSideBar.cpp  ArcScreenSideBar.cpp  ArcScreenToolButton.cpp  ScreenViewer.cpp  Skin.cpp
